<?xml version="1.0"?>
<package>
  <name>flexiforce_glove</name>
  <version>0.0.0</version>
  <description>The flexiforce_glove package</description>

  <maintainer email="cjrosales@gmail.com">Carlos Rosales</maintainer>

  <license>BSD</license>

  <!-- developed under the PaCMan project -->
  <url type="project">http://www.pacman-project.eu/</url>
  <url type="repository">https://github.com/CentroEPiaggio/flexiforce-glove</url>

  <author email="santaeragaspare@inwind.it">Gaspare Santaera</author>
  <author email="ema.lbt@hotmail.it">Emanuele Luberto</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>